welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:1: error: ambiguous reference to overloaded definition,
both method backward in class BaggleSeeker of type (i: Int)Unit
and  method backward in class SimpleBuggle of type ()Unit
match expected type ?
while(!isOverBaggle) backward 
                     ^